--- a/scipy_ODE_notebook.ipynb
+++ b/scipy_ODE_notebook.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -27,8 +25,6 @@
     "Physics as \n",
     "shown at http://www.physics.nyu.edu/pine/pymanual/html/chap9/chap9_scipy.html\n",
     "\"\"\"\n",
-    "\n",
-    "%matplotlib inline\n",
     "\n",
     "import numpy as np\n",
     "from math import pi\n",
@@ -122,9 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2155,9 +2149,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2169,7 +2163,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
