Adding in more information on problem statement., Need to complete sources.

--- a/Problem_Statement.ipynb
+++ b/Problem_Statement.ipynb
@@ -14,7 +14,7 @@
     "# Solution\n",
     "To simplify things, we will model the person as a single magnet , suspended in \n",
     "the pool with the thin end pointed towards the sky, and rotating about its \n",
-    "middle.\n",
+    "middle. (Pretend they're wearing a metal suit that we have somehow turned into a giant magnet.)\n",
     "\n",
     "The rotational version of Newton's second law is\n",
     "\n",
@@ -24,7 +24,48 @@
     " \n",
     "* $\\tau$ represents the rotational forces on the object, \n",
     "* I represents the moment of inertia of the object about its rotational axis\n",
-    "* $\\ddot{\\theta}$ represents the angular acceleration of the object.\n"
+    "* $\\ddot{\\theta}$ represents the angular acceleration of the object.\n",
+    "\n",
+    "The two rotational torques acting on the person would be:\n",
+    "\n",
+    "1) the magnetic force spinning the person north, which is given by [1]\n",
+    "\n",
+    "$mB\\sin(\\theta)$ \n",
+    "\n",
+    "where \n",
+    "* $\\theta$ represents the angle between the person's orientation and north\n",
+    "* m represents the magnetic moment of the person\n",
+    "* B represents the strength of the Earth's magnetic field \n",
+    "\n",
+    "2) the drag force acting on the person (which varies about their rotational centre)\n",
+    "For an individual part of the person $\\ dx$ a distance from the rotational centre $\\ x$, the drag torque can be represented by \n",
+    "\n",
+    "$\\ x F_d$ \n",
+    "\n",
+    "$\\frac{\\rho A C_d V^2}{2}\\ dx$ \n",
+    "\n",
+    "$\\ V$, at distance $\\ x$ from the rotational centre, is given by $\\ x \\dot{\\theta}$, where $\\dot{\\theta}$ is the rotational velocity in radians/sec.\n",
+    "$\\ rho$ represents the density of the water\n",
+    "$\\ A$ represents the cross sectional area at that location, which is given by $\\ h \\ dx$, where $\\ h$ represents the height of the person in the water.\n",
+    "\n",
+    "Putting these all together we get:\n",
+    "\n",
+    "$\\frac{x^3 \\rho h C_d \\dot{\\theta^2}}{2} \\ dx$\n",
+    "\n",
+    "Integrating from the center of the person to the edge of the person, over a distance r, you get:\n",
+    "\n",
+    "$\\int_{0}^{r}\\frac{x^3 \\rho h C_d \\dot{\\theta^2}}{2} \\ dx = \\frac{r^4 \\rho h C_d \\dot{\\theta^2}}{8} $\n",
+    "\n",
+    "Now, as r is equal to the half the height of the person $\\frac{H}{2}$ we can write the drag force as \n",
+    "\n",
+    "$\\frac{H^4 \\rho h C_d \\dot{\\theta^2}}{128} $\n",
+    "\n",
+    "and the entire equation now becomes:\n",
+    "\n",
+    "$\\frac{-H^4 \\rho h C_d \\dot{\\theta^2}}{128} + mB\\sin(\\theta) = I \\ddot{\\theta}$\n",
+    "\n",
+    "\n",
+    "[1]: Taken from http://www2.hawaii.edu/~jmcfatri/labs/notes8.html"
    ]
   },
   {
